# mapreduce

./: Cargo.toml  README.md
proto/: mapreduce.proto
src/: client.rs  lib.rs  main.rs  server.rs
