[package]
name = "mapreduce"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
prost = "0.14.3"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "fs"] }
tokio-stream = "0.1.18"
tonic = { version = "0.14.2", features = ["transport"] }
tonic-prost = "0.14.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-prost-build = "0.14.2"
